# conda-sphinx-theme

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: docs.yml  release.yml  test.yml
conda_sphinx_theme/: __init__.py  _version.py  github_links.py  layout.html  theme.conf  version_anchors.py
conda_sphinx_theme/_templates/: conda_icon_links.html  footer_center.html  navbar_center.html  sidebar-nav-bs.html  theme-version.html
conda_sphinx_theme/static/css/: style.css
conda_sphinx_theme/static/js/: custom-icons.js  zulip-icon.js
docs/: Makefile  changelog.rst  conf.py  environment.yml  index.rst  requirements.txt
docs/nested_example/: index.rst
tests/: test_github_links.py  test_init.py  test_version_anchors.py
