[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "conda_sphinx_theme"
dynamic = ["version"]
description = "Conda theme for Sphinx"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Travs Hathaway"},
]
classifiers = [
    "Framework :: Sphinx :: Theme",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
]
dependencies = [
    "pydata-sphinx-theme>=0.13.1,<0.16.0",
    "sphinx-favicon",
]

[project.urls]
homepage = "https://github.com/conda-incubator/conda-sphinx-theme/"
repository = "https://github.com/conda-incubator/conda-sphinx-theme"

# http://www.sphinx-doc.org/en/stable/theming.html#distribute-your-theme-as-a-python-package
[project.entry-points."sphinx.html_themes"]
conda_sphinx_theme = "conda_sphinx_theme"

[tool.setuptools]
packages = ["conda_sphinx_theme"]
zip-safe = false

[tool.setuptools_scm]
version_file = "conda_sphinx_theme/_version.py"

[tool.setuptools.package-data]
conda_sphinx_theme = [
    "theme.conf",
    "*.html",
    "static/css/*.css",
    "static/js/*.js",
    "static/fonts/*.*",
    "static/*.svg",
    "static/*.ico",
    "_templates/*.html",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=conda_sphinx_theme",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-branch",
    "--cov-fail-under=44",
    "-v"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["conda_sphinx_theme"]
branch = true
omit = [
    "*/tests/*",
    "*/_version.py",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.pixi.workspace]
channels = ["conda-forge", "https://conda.anaconda.org/conda-forge/label/ty_alpha"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.9"

[tool.pixi.pypi-dependencies]
conda-sphinx-theme = { path = ".", editable = true }

[tool.pixi.tasks]
dev = "python -c \"print('Development environment ready')\""

[tool.pixi.feature.test.tasks]
test = "python -m pytest"
test-fast = "python -m pytest --no-cov"

[tool.pixi.feature.test.pypi-dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=7.0.0"
pytest-mock = ">=3.10.0"
sphinx = ">=8.0.0"
docutils = ">=0.21.0"

[tool.pixi.feature.dev.tasks]
lint = "ruff check conda_sphinx_theme/ tests/"
lint-fix = "ruff check --fix conda_sphinx_theme/ tests/"
type-check = "ty check conda_sphinx_theme/"
clean = "rm -rf .pytest_cache htmlcov .coverage coverage.xml build/ dist/ *.egg-info/"
ci = { depends-on = ["lint", "type-check", "test"] }
# Primary pre-commit tool (prek - faster Rust implementation)
hooks-install = "prek install"
hooks-run = "prek run"
hooks-update = "prek autoupdate"
# Legacy pre-commit (fallback option)
pre-commit-install = "pre-commit install"
pre-commit-run = "pre-commit run --all-files"
pre-commit-update = "pre-commit autoupdate"

[tool.pixi.feature.dev.dependencies]
prek = "*"
ruff = "*"
ty = "*"

[tool.pixi.environments]
default = []
test = ["test"]
dev = ["test", "dev"]
